Testcase for BUG#20633 "INSERT DELAYED RAND() or @user_var does not replicate statement-based" (bugfix was committed today): we verify that now it works in mixed mode. And a comment.